EngineLaunch: Use ProcessBuilder to create engine process